@@ -1,6 +1,7 @@
 1.0.0 (trunk):
 * Changes marked with ! are type changes (not including field additions)
 * ! API.{get,post,delete,patch,put} now take optional fail_handlers
+* ! API.{get,post,delete,patch,put} now take optional rate classification
 * ! Token.{create,get_all,get,delete} now return _ authorization Monad.t
 * ! Token.{create,get_all,get,delete} now have additional ?otp:string argument
 * ! Token.create now has additional ?fingerprint:string argument
@@ -58,6 +59,7 @@
 * Fix git-jar token file permissions security vulnerability
 * git-jar now supports 2FA (#38)
 * Github.authorization type added
+* Github.rate type added for classifying requests into rate limiting regime
 * Github.handler type added
 * Add API.code_handler to make creating fail_handlers easier
 * Github.Message exception added and raised when GitHub returns an API error
